Added component overriding grunt task

--- a/less/overrides.less
+++ b/less/overrides.less
@@ -1,1 +1,4 @@
-// Overrides of existing Bootstrap classes.
+// Overrides of Bootstrap components.
+// This should not be edited manually.
+// Use grunt override:[component name] to add overrides.
+
