--- a/less/style.less
+++ b/less/style.less
@@ -1,5 +1,4 @@
 @import "../bootstrap/less/bootstrap.less";
-@import "variables.less";
 @import "overrides.less";
-@import "mixins.less";
-@import "custom.less";
+@import "variables.less";
+@import "theme.less";
